# vegmap

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  commands.sh  david_code.md
src/gazebo/gazebo-vegetation/gazebo_vegetation/: CMakeLists.txt  package.xml
src/gazebo/gazebo-vegetation/gazebo_vegetation/env-hooks/: gazebo_vegetation.dsv.in
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/bush_0/: model.sdf
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/bush_1/: model.sdf
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/bush_2/: model.sdf
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/bush_3/: model.sdf
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/bush_4/: model.sdf
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/bush_5/: model.sdf
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/palm_tree/: model.sdf
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/tree_1/: model.sdf
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/tree_2/: model.sdf
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/tree_3/: model.sdf
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/tree_4/: model.sdf
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/tree_5/: model.sdf
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/tree_6/: model.sdf
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/tree_7/: model.sdf
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/tree_8/: model.sdf
src/gazebo/gazebo-vegetation/gazebo_vegetation/models/tree_9/: model.sdf
src/planner/: CMakeLists.txt  global_planner_plugin.xml  gradient_layer_plugin.xml  navfn_planner_plugin.xml  package.xml  straight_line_planner_plugin.xml  veg_costmap_plugin.xml  vegmap_planner_plugin.xml
src/planner/config/: localization_params.yaml  nav2.rviz  nav2_params.yaml
src/planner/include/nav2_navfn_planner/: navfn.hpp  navfn_planner.hpp
src/planner/include/planner/: Astar_search.hpp  gradient_layer.hpp  straight_line_planner.hpp  veg_costmap_layer.hpp  vegmap_planner.hpp
src/planner/launch/: gz_bridge.launch.py  nav2_bringup.launch.py  planner.launch.py  planner_client.launch.py  planner_server.launch.py  pose_info_bridge.py  resistance_zones.rviz  sdf_to_map.py  traverse_cost.launch.py  vegmap_planner.launch.py
src/planner/maps/: create_pgm.py  empty_map.yaml  warehouse.yaml  warehouse_map.pgm  warehouse_map.yaml
src/planner/resistance/: cost_traverse.py  costmap_generator.py  costmap_visualizer.py  fluid_resistance.cpp  resistance_monitor.py  resistance_monitor_comb.py
src/planner/sensors/: ground_truth.py  wheel_slip_monitor.py
src/planner/src/: Astar_search.cpp  cost_traverse.py  costmap_generator.py  gradient_layer.cpp  navfn.cpp  navfn_planner.cpp.bak  planner.cpp  planner_client.cpp  planner_node.cpp  planner_server.cpp  pose_info_bridge.py  resistance_monitor.py  resistance_monitor_2.py  robot_pose_tf_publisher.py  straight_line_planner.cpp  traverse_cost_updater.py  veg_costmap_layer.cpp  veg_costmap_updater.py  vegmap_planner.cpp
src/planner/worlds/: boxed_in_world.sdf  grass_new.sdf  grass_world.sdf  info.md  outdoors.sdf  resistance_comb.sdf  resistance_zone.sdf  resistance_zone.sdf.bak  resistance_zone_2.sdf  spring.sdf  spring.sdf.bak  terrains.sdf
src/planner/worlds/rubicon/: model.sdf  rubicon_world.sdf
src/planner/worlds/rubicon/meshes/: rubicon.dae
src/planner_msgs/: CMakeLists.txt  package.xml
src/planner_msgs/srv/: GetTransforms.srv  UpdateCost.srv
src/setup_path/: Dockerfile  robot.srdf  robot.srdf.xacro  robot.urdf.xacro  robot.yaml
src/setup_path/manipulators/config/: moveit.yaml
src/setup_path/platform/config/: control.yaml  imu_filter.yaml  localization.yaml  teleop_interactive_markers.yaml  teleop_joy.yaml  twist_mux.yaml
src/setup_path/platform/launch/: platform-service.launch.py
src/setup_path/sensors/config/: imu_0.yaml  lidar3d_0.yaml
src/setup_path/sensors/launch/: imu_0.launch.py  lidar3d_0.launch.py  sensors-service.launch.py
